--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,9 @@
         <service
             android:name=".ui.service.MusicPlaybackService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
+
+        <activity android:name=".ui.activity.NowPlayingActivity"></activity>
     </application>
 
 </manifest>
